bug 22875 - Wraps playback formats in device info panel (r=mook).
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@20303 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/feathers/gonzo/chrome/content/bindings/device/deviceInfo.css
+++ b/feathers/gonzo/chrome/content/bindings/device/deviceInfo.css
@@ -48,6 +48,7 @@ Imported by bindings.css or directly into feathers.
 }
 .device-specs-grid-label {
   font-size:100%;
+  max-width:200px;
 }
 
 #info_box {
